--- a/adopt-me/src/style.css
+++ b/adopt-me/src/style.css
@@ -25,14 +25,18 @@ body {
   float: left;
 }
 
+.results {
+  width: 715px;
+  float: left;
+  margin-bottom: 25px;
+}
+
 .search {
+  padding: 15px;
+  margin-bottom: 25px;
   border-radius: 6px;
   background: #faeff0;
   box-shadow: 0px 0px 12px #aaa, -0px -0px 12px #fff;
-  width: 715px;
-  padding: 15px;
-  float: left;
-  margin-bottom: 25px;
 }
 
 .details {
@@ -220,6 +224,12 @@ header {
   border: 1px solid cornflowerblue;
 }
 
+.search-params button:disabled,
+.search-params button[disabled] {
+  cursor: not-allowed;
+  background-color: rgb(121, 121, 121);
+}
+
 #modal {
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
@@ -270,11 +280,24 @@ header {
   }
 
   .search {
-    width: 55%;
-    padding: 15px;
     border-radius: 9px;
+    padding: 15px;
+    margin-bottom: 25px;
+  }
+
+  .results {
+    width: 55%;
     float: left;
     margin-bottom: 25px;
+  }
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+  }
+
+  .pagination button {
+    margin: 0 1rem;
   }
 
   .details {
