add active pagination btn

--- a/adopt-me/src/style.css
+++ b/adopt-me/src/style.css
@@ -212,6 +212,10 @@ header {
   text-decoration: none;
 }
 
+#num-btn {
+  background-color: #122622;
+}
+
 .search-params button:hover {
   background-color: #122622;
 }
